// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Svg renders a menu icon with no size 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  fill: #158acf;
  color: #158acf;
}

<svg
    class="emotion-0"
    viewBox="1 2 3 4"
  />
</DocumentFragment>
`;

exports[`Svg renders a menu icon with specified size and color 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  fill: #158acf;
  color: #158acf;
}

<svg
    class="emotion-0"
    viewBox="1 2 3 4"
  />
</DocumentFragment>
`;

exports[`Svg renders a menu icon with specified size and default color 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  fill: #000000;
  color: #000000;
  width: 3;
  height: 3;
}

<svg
    class="emotion-0"
    viewBox="1 2 3 4"
  />
</DocumentFragment>
`;
